--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,30 +3,15 @@
   <div class="container">
 
     <div class="item-navbar-row">
-      <mat-toolbar color="primary">
-        <span>Equation Solver</span>
-      </mat-toolbar>
+      <app-navigation-bar></app-navigation-bar>
     </div>
 
     <div class="item-content-row">
       
-      <div class="item-code-col mat-elevation-z4">
-        <ngx-codemirror
-          [(ngModel)]="content"
-          [options]="{
-            lineNumbers: true,
-            theme: 'material-darker',
-            mode: 'python'
-          }"
-        ></ngx-codemirror>
-      </div>
+      <app-equation-editor class="item-code-editor mat-elevation-z4"></app-equation-editor>
   
-      <div class="item-panel-col">
-        <mat-tab-group color="basic" backgroundColor="primary" class="tabs mat-elevation-z4">
-          <mat-tab label="Solution"> Content 1 </mat-tab>
-          <mat-tab label="Guess Values"> Content 2 </mat-tab>
-          <mat-tab label="Settings"> Content 3 </mat-tab>
-        </mat-tab-group>
+      <div class="item-side-bar">
+        <app-side-bar></app-side-bar>
       </div>
 
     </div>
