--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,32 @@
     </div>
 
     <div class="item-content-row">
-      
-      <app-equation-editor class="item-code-editor mat-elevation-z4"></app-equation-editor>
-  
+
+      <button mat-fab extended color="warn" style="flex: 0 0 auto;margin: 5px;" (click)="sendSolveRequest()">
+        <mat-icon>play_circle_filled</mat-icon>
+        Solve
+      </button>
+
+      <app-equation-editor [equations]="equations" class="item-code-editor mat-elevation-z4"></app-equation-editor>
+
       <div class="item-side-bar">
-        <app-side-bar></app-side-bar>
+
+        <mat-tab-group color="basic" backgroundColor="primary" class="tabs mat-elevation-z4">
+
+          <mat-tab label="Solution">
+            <app-solution-tab [solution]="solution"></app-solution-tab>
+          </mat-tab>
+
+          <mat-tab label="Guess Values">
+            <app-guess-values-tab [guessValues]="guessValues"></app-guess-values-tab>
+          </mat-tab>
+
+          <mat-tab label="Settings">
+            <app-settings-tab [settingsForm]="settingsForm"></app-settings-tab>
+          </mat-tab>
+
+        </mat-tab-group>
+
       </div>
 
     </div>
