--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         Solve
       </button>
 
-      <app-equation-editor [equations]="equations" class="item-code-editor mat-elevation-z4"></app-equation-editor>
+      <app-equation-editor [equationsControl]="equationsControl" class="item-code-editor mat-elevation-z4"></app-equation-editor>
 
       <div class="item-side-bar">
 
@@ -24,7 +24,7 @@
           </mat-tab>
 
           <mat-tab label="Guess Values">
-            <app-guess-values-tab [guessValues]="guessValues"></app-guess-values-tab>
+            <app-guess-values-tab [guessValuesForm]="guessValuesForm"></app-guess-values-tab>
           </mat-tab>
 
           <mat-tab label="Settings">
