--- a/src/app/equation-editor/equation-editor.component.html
+++ b/src/app/equation-editor/equation-editor.component.html
@@ -1,17 +1,7 @@
 <mat-card class="code-editor-wrapper">
-    <!--<div class="code-editor-header">
-        <div style="display: flex; flex-flow: row nowrap; justify-content: space-between;">
-        <mat-card style="flex: 0 0 auto;">
-        </mat-card>
-        <button mat-fab extended color="warn" style="flex: 0 0 auto;margin: 5px;">
-            <mat-icon>play_circle_filled</mat-icon>
-            Solve
-          </button>
-          </div>
-    </div>-->
-
     <div class="code-editor">
         <ngx-codemirror
+            [formControl]="equationsControl"
             [(ngModel)]="equations"
             [options]="{
             lineNumbers: true,
