--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,3 +1,6 @@
 <mat-toolbar color="primary">
-    <span>Equation Solver</span>
+    <mat-toolbar-row>
+        <a mat-button [routerLink]="''" class="navbar-buttons"> Equation Solver </a>
+        <a mat-button [routerLink]="'/about'" class="navbar-buttons"> About </a>
+    </mat-toolbar-row>
 </mat-toolbar>
