--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-        <a mat-button [routerLink]="''" class="navbar-buttons"> Equation Solver </a>
+        <a mat-button [routerLink]="''" class="navbar-buttons"> Solver </a>
         <a mat-button [routerLink]="'/about'" class="navbar-buttons"> About </a>
+        <span class="example-spacer"></span>
+        <a mat-button href="https://www.linkedin.com/in/dmitrii-turygin/" class="navbar-buttons" target="_blank">My LinkedIn</a>
+        <a mat-button href="https://github.com/tvdmitrii?tab=repositories" class="navbar-buttons" target="_blank">My GitHub</a>
     </mat-toolbar-row>
 </mat-toolbar>
